# Dissertation-project

./: .gitignore  README.md  RESEARCH_PLAN.md  pyproject.toml
configs/: base.yaml
configs/experiments/: exp01_baseline.yaml  exp02_no_rag.yaml  exp07_medical_embeddings.yaml  exp14_hybrid_retrieval.yaml
data/raw/images/: .gitkeep
data/raw/pdfs/: .gitkeep
evaluation/: __init__.py  benchmarks.py  evaluator.py
experiments/: run_experiment.py
src/: pipeline.py
src/chunking/: __init__.py  base.py  fixed_chunker.py  semantic_chunker.py
src/embedding/: base.py  general_embedder.py  medical_embedder.py
src/extraction/: __init__.py  base.py  marker_extractor.py  pymupdf_extractor.py  unstructured_extractor.py
src/generation/: __init__.py  medgemma.py
src/retrieval/: __init__.py  base.py  dense_retriever.py  hybrid_retriever.py
thesis/: notes.md
