[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "medrag"
version = "0.1.0"
description = "Comparative RAG Strategies for Medical QA with MEDgemma"
requires-python = ">=3.10"
dependencies = [
    # Core
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",

    # Document extraction
    "pymupdf>=1.24.0",
    "unstructured[pdf]>=0.13.0",
    "marker-pdf>=0.2.0",

    # Embeddings & retrieval
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",

    # Evaluation
    "ragas>=0.1.0",
    "datasets>=2.19.0",

    # Experiment tracking
    "wandb>=0.16.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",

    # Utils
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
multimodal = [
    "open-clip-torch>=2.24.0",
    "pillow>=10.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "evaluation*"]

[tool.ruff]
line-length = 100
target-version = "py310"
